...
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let bestGame = statisticService.bestGame
            statisticService.setTotalAccuracy(correctAnswers: correctAnswers, gamesCount: gamesCount)
            let totalAccuracy = statisticService.totalAccuracy
        
        
        let model = AlertModel(title: "Этот раунд окончен!",
                               message: """
                           Ваш результат: \(correctAnswers)/10
                           Количество сыгранных квизов \(gamesCount)
                           Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGame.date.dateTimeString))
                           Средяя точность: \(String(format: "%.2f", totalAccuracy))%
                           """,
...
